--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,25 @@
 name: Azure Python 3.5
 on: [push]
+
 jobs:
- build:
-   runs-on: ubuntu-latest
-   steps:
-   - uses: actions/checkout@v2
-   - name: Set up Python 3.5.10
-   uses: actions/setup-python@v1
-   with:
-     python-version: 3.5.10
-   - name: Install dependencies
-   run: |
-     make install
-   - name: Lint
-   run: |
-     make lint
-   - name: Test
-   run: |
-     make test
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
+
+      - name: Install dependencies
+        run: |
+          make install
+
+      - name: Lint
+        run: |
+          make lint
+
+      - name: Test
+        run: |
+          make test
